--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -14,28 +14,31 @@
     "lint:fix": "eslint src --fix"
   },
   "dependencies": {
-    "@langchain/core": "^0.3.42",
-    "@langchain/langgraph": "^0.2.55",
-    "langchain": "^0.3.19",
+    "@langchain/community": "^0.3.50",
+    "@langchain/core": "^0.3.70",
+    "@langchain/langgraph": "^0.2.74",
+    "@langchain/langgraph-checkpoint": "^0.0.16",
+    "@langchain/openai": "^0.6.7",
+    "@langchain/tavily": "^0.1.5",
     "dotenv": "^16.4.5",
+    "langchain": "^0.3.19",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8",
-    "@langchain/langgraph-checkpoint": "^0.0.16"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
+    "@jest/globals": "^29.7.0",
+    "@types/node": "^20",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
-    "@jest/globals": "^29.7.0",
-    "globals": "^15.14.0",
     "eslint-plugin-no-instanceof": "^1.0.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "@eslint/eslintrc": "^3.3.0",
-    "@eslint/js": "^9.22.0",
-    "@types/node": "^20",
-    "@types/uuid": "^10.0.0",
+    "globals": "^15.14.0",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "turbo": "latest",
