--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@langchain/community": "^0.3.50",
     "@langchain/core": "^0.3.70",
+    "@langchain/groq": "^0.2.3",
     "@langchain/langgraph": "^0.2.74",
     "@langchain/langgraph-checkpoint": "^0.0.16",
     "@langchain/openai": "^0.6.7",
