--- a/apps/agents/package.json
+++ b/apps/agents/package.json
@@ -20,7 +20,10 @@
     "@langchain/langgraph": "^0.2.74",
     "@langchain/langgraph-checkpoint": "^0.0.16",
     "@langchain/openai": "^0.6.7",
+    "@langchain/qdrant": "^0.1.3",
     "@langchain/tavily": "^0.1.5",
+    "@langchain/textsplitters": "^0.1.0",
+    "cheerio": "^1.1.2",
     "dotenv": "^16.4.5",
     "langchain": "^0.3.19",
     "uuid": "^10.0.0",
